new proj/src/objects/GE_SS_Project__c.object
<CustomObject>
    <fields>
        <fullName>GE_SS_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Projects4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_Actual_End_Date__c</fullName>
        <label>Actual End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_SS_Actual_Start_Date__c</fullName>
        <label>Actual Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_SS_Approver__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Approver</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_Assignment_Group__c</fullName>
        <label>Assignment Group</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_SS_Billing_Reference__c</fullName>
        <label>Billing Reference #</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Block_Lease__c</fullName>
        <label>Block/Lease</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Closed_On__c</fullName>
        <label>Closed On</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GE_SS_Comments__c</fullName>
        <label>Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_SS_Commercial_Contact_Email__c</fullName>
        <label>Commercial Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_SS_Commercial_Contact_Name__c</fullName>
        <label>Commercial Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Commercial_Contact_Phone__c</fullName>
        <label>Commercial Contact Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Country__c</fullName>
        <label>Country</label>
        <picklist>
            <picklistValues>
                <fullName>Afghanistan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Akrotiri</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Albania</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Algeria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>American Samoa</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Andorra</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Angola</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Anguilla</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antarctica</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Antigua and Barbuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Argentina</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Armenia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Aruba</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Ashmore and Cartier Islands</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Australia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Austria</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Azerbaijan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahamas, The</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bahrain</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bangladesh</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Barbados</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bassas da India</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belarus</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belgium</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Belize</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Benin</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bermuda</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bhutan</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bolivia</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Bosnia and Herzegovina</fullName>
            </picklistValues>
            <sorted>true</sorted>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Customer_PO_number__c</fullName>
        <label>Customer PO number</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_EPC_Contract__c</fullName>
        <label>EPC Contract</label>
        <picklist>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>No</fullName>
                <default>true</default>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Field_Decommissioning_Year__c</fullName>
        <label>Field Decommissioning Year</label>
        <picklist>
            <picklistValues>
                <fullName>1962</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1963</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1964</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1965</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1966</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1967</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1968</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1969</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1970</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1971</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1972</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1973</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1974</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1975</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1976</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1977</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1978</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1979</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1980</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1981</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1982</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1983</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1984</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1985</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1986</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1987</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1988</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1989</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1990</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1991</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Field_Type__c</fullName>
        <label>Field Type</label>
        <picklist>
            <picklistValues>
                <fullName>Oil</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Gas</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Field__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Field</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>Location Record Type must be Field</errorMessage>
            <filterItems>
                <field>SVMXC__Site__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Field</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>FS Projects (Field)</relationshipLabel>
        <relationshipName>Projects1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_Internal_Comments__c</fullName>
        <label>Internal Comments</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_SS_Job_Description__c</fullName>
        <label>Job Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>GE_SS_Job_Location__c</fullName>
        <label>Job Location</label>
        <picklist>
            <picklistValues>
                <fullName>Onshore</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Offshore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Job_Type__c</fullName>
        <label>Job Type</label>
        <picklist>
            <picklistValues>
                <fullName>Commissioning</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Corrective Maintenance</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Demobilisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobilisation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Light Well Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SIT/EFAT-Extended FAT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Inspection</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Installation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Modification/Overhaul</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Plug &amp; Abandon</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Workover</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Intervention</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Off_set_KM__c</fullName>
        <label>Off set (KM)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Platform_FPSO__c</fullName>
        <label>Platform/FPSO</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Product_Category__c</fullName>
        <label>Product Category</label>
        <picklist>
            <picklistValues>
                <fullName>Intervention</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manifolds and Connectors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Rental</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Trees(SSPE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Wellheads(SSWE)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controls (Topside)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Controls (Subsea)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TLP&amp;SPAR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chokes</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Tie-In</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Product_Group__c</fullName>
        <label>Product Group</label>
        <picklist>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS - BOP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS - DISTRIBUTION</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS - SYSTEM</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS - TOPSIDES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS - TREE/MANIFOLDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONTROLS SYSTEMS - WOCS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TREE ON MUDLINE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURFACE TREE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>CONVENTIONAL SUBSEA TREE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HORIZONTAL SUBSEA TREE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS - FLOWLINE CONNECTORS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS - FLOWLINE JUMPERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS - OTHERS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS - PLEMS / PLETS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS - PROTECTIVE STRUCTURE</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MANIFOLDS - TEMPLATES</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SURFACE VALVE MANIFOLDS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS700 WELLHEAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSNT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MSNT - HP</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>DMS 700 WELLHEAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MULTI-BOWL WELLHEADS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG WELLHEAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SG5 COMPLETION EQUIPMENT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TYPE OF SURFACE WELLHEADS</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>SWE - ADJUSTABLE TENSION RISER ASSEMBLY (RTA)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>MS700 BULKLOAD</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>TLP</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Project_ID__c</fullName>
        <displayFormat>SS-Project {000000}</displayFormat>
        <label>Project ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>GE_SS_Project_Region__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Project Region</label>
        <referenceTo>GE_SS_Project_Region__c</referenceTo>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_Rig_Vessel_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Rig/Vessel Name</label>
        <lookupFilter>
            <active>true</active>
            <errorMessage>The Record Type must be Rig</errorMessage>
            <filterItems>
                <field>SVMXC__Site__c.RecordType.Name</field>
                <operation>equals</operation>
                <value>Rig</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>SVMXC__Site__c</referenceTo>
        <relationshipLabel>FS Projects (Rig/Vessel Name)</relationshipLabel>
        <relationshipName>Projects</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>GE_SS_Rig_Vessel_Type__c</fullName>
        <formula>TEXT(GE_SS_Rig_Vessel_Name__r.GE_DS_Rig_Type__c)</formula>
        <label>Rig/Vessel Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_State__c</fullName>
        <label>SS State</label>
        <picklist>
            <picklistValues>
                <fullName>Draft</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Released to FS</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Status__c</fullName>
        <label>Status</label>
        <picklist>
            <picklistValues>
                <fullName>Open</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>Closed</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Cancelled</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>On Hold</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Technical_Contact_Email__c</fullName>
        <label>Technical Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>GE_SS_Technical_Contact_Name__c</fullName>
        <label>Technical Contact Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Technical_Contact_Phone__c</fullName>
        <label>Technical Contact Phone</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GE_SS_Tie_Back_to__c</fullName>
        <label>Tie Back to</label>
        <picklist>
            <picklistValues>
                <fullName>Platform</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>FPSO</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>To Shore</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Type_of_Customer_Project__c</fullName>
        <label>Type of Customer Project</label>
        <picklist>
            <picklistValues>
                <fullName>Greenfield</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Brownfield</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>GE_SS_Water_Depth_M__c</fullName>
        <label>Water Depth (M)</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <label>FS Project</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>GE_SS_Account__c</columns>
        <columns>GE_SS_Job_Type__c</columns>
        <columns>GE_SS_Status__c</columns>
        <columns>GE_SS_Job_Description__c</columns>
        <columns>GE_SS_State__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Project Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>FS Projects</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>